Removed height attribute for inputContainer to fix content overflow

--- a/forms/signupFormStyles.css
+++ b/forms/signupFormStyles.css
@@ -26,7 +26,6 @@
 
 .userInfo {
     background-color: #ffffff;
-    height: 30vh;
     padding-top: 5px;
     padding-bottom: 5px;
     padding-left: 50px;
